# lyricscraper

./: README.md  frontend.py  requirements.txt  setup.cfg  setup.py
lyricscraper/: lyrics.py
lyricscraper/engines/: azlyrics.py  base.py  metro_lyrics.py  pylyrics.py
tests/: __init__.py  engine_test.py  lyrics_test.py
